force-app/main/default/objects/Journey_Plan_Day__c/fields/Followed__c.field-meta.xml
<CustomField>
    <fullName>Followed__c</fullName>
    <label>Followed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>