force-app/main/default/objects/Journey_Plan_Day__c/fields/JW_User__c.field-meta.xml
<CustomField>
    <fullName>JW_User__c</fullName>
    <label>JW User</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>JourneyPlanDay_JW_User</relationshipName>
    <type>Lookup</type>
</CustomField>