force-app/main/default/objects/Journey_Plan_Day__c/fields/Territory_District__c.field-meta.xml
<CustomField>
    <fullName>Territory_District__c</fullName>
    <label>Territory / District</label>
    <length>80</length>
    <type>Text</type>
</CustomField>